--- a/src/app/components/tabs/tab-left/tab-left.component.html
+++ b/src/app/components/tabs/tab-left/tab-left.component.html
@@ -1,4 +1,4 @@
-<div id="tab-left" class="hidden-xs">
+<div id="tab-left" class="hidden-xs" (click)="hideTabLeft()">
   <div>
     <div class="tab-left">
       <ul class="nav nav-tabs">
