--- a/src/app/personnels/info-person/party-union/party-union.component.html
+++ b/src/app/personnels/info-person/party-union/party-union.component.html
@@ -13,7 +13,7 @@
         <!---->
         <div class="form-item" formGroupName="actionParty">
           <div class="form-item-title">
-            Quá trình hoạt động đảng
+            Quá trình hoạt động Đảng
           </div>
           <div class="item-control">
             <label>Ngày vào Đảng </label>
@@ -40,7 +40,7 @@
         <!--quá trình hoạt động Đoàn thể  -->
         <div class="form-item" formGroupName="actionUnion">
           <div class="form-item-title">
-            Quá trình hoạt động Đoàn thể
+            Quá trình hoạt động Đoàn
           </div>
           <!---->
           <div class="item-control">
@@ -154,7 +154,7 @@
           <th>STT</th>
           <th>Từ ngày</th>
           <th>Nơi sinh hoạt</th>
-          <th>Chức vụ đảng</th>
+          <th>Chức vụ Đảng</th>
           <th>Hiện tại</th>
           <th>
           </th>
