--- a/src/app/personnels/manager-personnels/procedure-bonus/procedure-bonus.component.html
+++ b/src/app/personnels/manager-personnels/procedure-bonus/procedure-bonus.component.html
@@ -23,9 +23,9 @@
       </div>
     </div>
 
-    <div *ngIf="message.condition && formNotValid" [ngClass]="'alert alert-'+ message.type">
-      {{message.content}}
-    </div>
+    <!--<div *ngIf="message.condition && formNotValid" [ngClass]="'alert alert-'+ message.type">-->
+      <!--{{message.content}}-->
+    <!--</div>-->
 
   </modal-header>
 
