--- a/src/app/components/headers/header-2/header-2.component.html
+++ b/src/app/components/headers/header-2/header-2.component.html
@@ -1,13 +1,39 @@
 <div class="container-fluid " style="background-color: rgb(17,46,76);padding-left: 0;">
   <div class="row">
     <div class="col-xs-12">
+
       <div class="app-head">
-        <div class="app-logo">
-         <a routerLink="/home">  <img src="../../../../assets/images/logo/logo4.png" alt="logo"></a>
-        </div>
-        <div class="app-name">
-          {{titleName}}
-        </div>
+        <!--<div class="navbar-toggle" (click)="toogleMenuLeft()">-->
+        <!--<span class="icon-bar"></span>-->
+        <!--<span class="icon-bar"></span>-->
+        <!--<span class="icon-bar"></span>-->
+        <!--</div>-->
+        <!--<div>-->
+          <div class="app-logo">
+            <a routerLink="/home">
+              <img src="../../../../assets/images/logo/logo4.png" alt="logo">
+              <span style="font-weight: 600;color: #fff;">VNUA</span>
+            </a>
+          </div>
+          <div class="app-name">
+            {{titleName}}
+          </div>
+          <div class="right">
+            <div class="dropdown">
+              <a id="dropdownMenu1" data-toggle="dropdown" style="cursor: pointer; color: #fff"
+                 aria-haspopup="true" aria-expanded="true">
+                {{user?user.username:''}}
+                <span class="caret"></span>
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                <li><a style="cursor: pointer" (click)="logout()">Đăng xuất</a></li>
+                <li><a href="#">Đăng xuất</a></li>
+              </ul>
+            </div>
+          </div>
+           <div style="display: table-cell;vertical-align: middle"></div>
+        <!--</div>-->
+
       </div>
       <div class="clearfix"></div>
     </div>
